--- a/.env-sample
+++ b/.env-sample
@@ -1,1 +1,11 @@
-MORALIS_API_KEY=xxx
+MORALIS_API_KEY=
+SERVER_HOST=
+SERVER_USER=
+SERVER_PASS=
+
+DB_HOST=
+DB_USER=
+DB_PASS=
+DB_NAME=
+
+PROVIDER_KEY=
