--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "ethers": "^5.6.9",
+    "node-cron": "^3.0.1",
+    "node-scp": "^0.0.18",
+    "pg": "^8.7.3",
     "web3": "^1.7.4"
   }
 }
